Add hover behavior and copy

--- a/assc.html
+++ b/assc.html
@@ -18,38 +18,27 @@
                 </div>
                 <div class="Description">
                     <div class="Description-block">
-                        <div class="Description-title">The Anti Sarah Shader Club — $89</div>
-                        <div class="Description-subtitle">Traditional Retail: $144</div>
+                        <div class="Description-title">The Anti Sarah Shader Club &mdash; $69</div>
+                        <div class="Description-subtitle">Traditional Retail: Priceless</div>
                     </div>
                     <div class="Description-block">
-                        <div class="ColorPicker-text">Software Engineer</div>
                         <div class="ColorPicker-buttons">
-                            <div class="Button"></div>
-                            <div class="Button"></div>
-                            <div class="Button"></div>
+                            <div class="Button Button-3 Button-unavailable"><div class="Button-inner"></div></div>
+														<div class="Button Button-2 Button-available"><div class="Button-inner"></div></div>
+														<div class="Button Button-1 Button-unavailable"><div class="Button-inner"></div></div>
+                            <div class="ColorPicker-text"></div>
                         </div>
                     </div>
                     <div class="Description-block">
                         <div class="SizePicker">
-                            <div class="SizePicker-text">Select a size</div>
                             <div class="SizePicker-buttons">
-                                <div class="Button">5.5 in</div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
-                                <div class="Button"></div>
+                                <div class="Button Button-unavailable Button-4"><span class="ButtonContent">22</span></div>
+                                <div class="Button Button-available Button-3"><span class="ButtonContent">23</span></div>
+                                <div class="Button Button-unavailable Button-2"><span class="ButtonContent">24</span></div>
+                                <div class="Button Button-unavailable Button-1"><span class="ButtonContent">25</span></div>
+                                <div class="SizePicker-text"></div>
                             </div>
-                            <div class="SizePicker-guide">Size Guide</div>
+                            <div class="SizePicker-guide"><a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXY5YmN2ZHA1dnQ3bWdjaHBobjFlZDlpczVfMjAxOTAzMTIga29iZmxqbDRsMWdjaWdoM3AycHFmcWNta2NAZw&amp;tmsrc=kobfljl4l1gcigh3p2pqfqcmkc%40group.calendar.google.com&amp;scp=ALL">Size Guide</a></div>
                         </div>
                         <div class="CtaButton">ADD TO BAG</div>
                     </div>
@@ -68,7 +57,7 @@
                                         </g>
                                         </g>
                                     </svg>
-                                    <div class="TextWithIcon-text">Model is 5'7" &#183; Wearing size 31</div>
+                                    <div class="TextWithIcon-text">Model is 5'8" &#183; Taller than the average corgi</div>
                                   </div>
                                   <div class="TextWithIcon">
                                     <svg class="TextWithIcon-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 128 160" style="enable-background:new 0 0 128 128;" xml:space="preserve">
@@ -76,8 +65,8 @@
                                             <path d="M124,31h-17c-1.7,0-3,1.3-3,3s1.3,3,3,3h14v84H19.1C12.4,121,7,115.6,7,108.9c0-6.6,5.4-12,11.9-12.1L86.5,97   c2.5,0,4.5,2,4.5,4.5c0,2.5-2,4.5-4.5,4.5H19c-1.7,0-3,1.3-3,3s1.3,3,3,3h67.5c5.8,0,10.5-4.7,10.5-10.5c0-0.1,0-0.2,0-0.3   c0-0.1,0-0.1,0-0.2V11.5C97,5.7,92.3,1,86.5,1H19C9.1,1,1,9.1,1,19v90c0,0,0,0.1,0,0.1C1.1,119,9.2,127,19.1,127H124   c1.7,0,3-1.3,3-3V34C127,32.3,125.7,31,124,31z M7,19c0-6.6,5.4-12,12-12h67.5C89,7,91,9,91,11.5V92c-1.4-0.7-2.9-1-4.5-1   l-67.7-0.2c-4.5,0.1-8.7,1.8-11.8,4.7V19z"/>
                                         </g>
                                     </svg>
-                                    <div class="TextWithIcon-text">98% Cotton, 2% Elastane
-                                            Machine wash cold. Tumble dry low.</div>
+                                    <div class="TextWithIcon-text">50% Korean, 50% European mutt. 100% Shader.
+                                    <br>Wash with warm water. Dry with fluffy towel.</div>
                                 </div>
                                 <div class="TextWithIcon">
                                     <svg class="TextWithIcon-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 48 60" enable-background="new 0 0 48 48" xml:space="preserve">
@@ -88,24 +77,24 @@
                                             <line fill="none" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="10" x1="14.5" y1="47" x2="29.4" y2="47"/>
                                         </g>
                                     </svg>
-                                    <div class="TextWithIcon-text">Made in Bien Hoa, Vietnam &#183; <a>See the factory</a></div>
+                                    <div class="TextWithIcon-text">Located in San Francisco, CA &#183; <a target="_blank" href="https://goo.gl/maps/feD29QqRWxwAnEac7">See the factory</a></div>
                                 </div>
                                 <div class="TextWithIcon">
                                     <svg class="TextWithIcon-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve">
                                         <path d="M79.146,25.511c-0.001,0-0.001,0-0.002,0l-58.289,0.052c-2.264,0-4.105,2.117-4.105,4.719V69.77  c0,2.602,1.841,4.719,4.105,4.719h58.291c2.264,0,4.104-2.117,4.104-4.719V30.232C83.25,27.629,81.409,25.511,79.146,25.511z   M76.675,29.014L50,48.431l-26.61-19.37L76.675,29.014z M79.146,70.989H20.855c-0.185,0-0.605-0.46-0.605-1.219V31.105l28.72,20.906  c0.307,0.224,0.668,0.335,1.03,0.335s0.723-0.111,1.03-0.335L79.75,31.105V69.77C79.75,70.529,79.33,70.989,79.146,70.989z"/>
                                     </svg>
-                                    <div class="TextWithIcon-text">Questions about fit? <a>Email fit@everlane.com</a></div>
+                                    <div class="TextWithIcon-text">Questions about fit? <a>Email questions@email.antisarahshader.club</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="Section">
                                 <div class="Section-title">Description</div>
-                                <div class="Section-content DescriptionSection-text">Your favorite cutoffs, but better. A short version of our best-selling Cheeky Jeans, this pair has a flattering high rise, pockets that give a lifting effect, and an overstitched raw hem that won’t shrink after washing. Made of premium denim with just a touch of stretch for comfort.</div>
+                                <div class="Section-content DescriptionSection-text">Our classic Sarah Shader Club—but negative. The Anti Sarah Shader Club features a snarky, weird girl and is made of soft, lightweight cotton. With an elegant taste for memes and slightly higher computer skills, this may just be the perfect Shader for everyday life.</div>
                         </div>
-                        <div class="Section">
+<!--                         <div class="Section">
                                 <div class="Section-title">Model is also wearing</div>
                                 <div class="Section-content">xcxc</div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
