Add real ASSC image

--- a/assc.html
+++ b/assc.html
@@ -8,13 +8,15 @@
             <div class="Assc-container">
                 <div class="Images">
                     <div class="ImagePicker">
-                        <img class="Thumbnail" src="banana_cat.jpeg" alt="do do do do do">
-                        <img class="Thumbnail" src="banana_cat.jpeg" alt="do do do do do">
-                        <img class="Thumbnail" src="banana_cat.jpeg" alt="do do do do do">
-                        <img class="Thumbnail" src="banana_cat.jpeg" alt="do do do do do">
-                        <img class="Thumbnail" src="banana_cat.jpeg" alt="do do do do do">
+                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
+                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
+                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
+                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
+                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
                     </div>
-                    <div class="ImageViewer"></div>
+                    <div class="ImageViewer">
+                        
+                    </div>
                 </div>
                 <div class="Description">
                     <div class="Description-block">
