Add real images

--- a/index.html
+++ b/index.html
@@ -8,14 +8,38 @@
             <div class="Assc-container">
                 <div class="Images">
                     <div class="ImagePicker">
-                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
-                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
-                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
-                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
-                        <img class="Thumbnail" src="assc.png" alt="do do do do do">
+                        <label for="thumbnail-1">
+                            <img class="Thumbnail" src="img1.jpg">
+                        </label>
+                        <label for="thumbnail-2">
+                            <img class="Thumbnail" src="img2.jpg">
+                        </label>
+                        <label for="thumbnail-3">
+                            <img class="Thumbnail" src="img3.jpg">
+                        </label>
+                        <label for="thumbnail-4">
+                            <img class="Thumbnail" src="img4.jpg">
+                        </label>
+                        <label for="thumbnail-5">
+                            <img class="Thumbnail" src="img5.jpg">
+                        </label>
+                        <label for="thumbnail-6">
+                            <img class="Thumbnail" src="img6.jpg">
+                        </label>
                     </div>
                     <div class="ImageViewer">
-                        
+                        <input type="radio" name="image-picker" id="thumbnail-1" checked>
+                        <img class="ImageViewer-fullImage" src="img1.jpg"></img>
+                        <input type="radio" name="image-picker" id="thumbnail-2">
+                        <img class="ImageViewer-fullImage" src="img2.jpg"></img>
+                        <input type="radio" name="image-picker" id="thumbnail-3">
+                        <img class="ImageViewer-fullImage" src="img3.jpg"></img>
+                        <input type="radio" name="image-picker" id="thumbnail-4">
+                        <img class="ImageViewer-fullImage" src="img4.jpg"></img>
+                        <input type="radio" name="image-picker" id="thumbnail-5">
+                        <img class="ImageViewer-fullImage" src="img5.jpg"></img>
+                        <input type="radio" name="image-picker" id="thumbnail-6">
+                        <img class="ImageViewer-fullImage" src="img6.jpg"></img>
                     </div>
                 </div>
                 <div class="Description">
@@ -42,7 +66,7 @@
                             </div>
                             <div class="SizePicker-guide"><a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXY5YmN2ZHA1dnQ3bWdjaHBobjFlZDlpczVfMjAxOTAzMTIga29iZmxqbDRsMWdjaWdoM3AycHFmcWNta2NAZw&amp;tmsrc=kobfljl4l1gcigh3p2pqfqcmkc%40group.calendar.google.com&amp;scp=ALL">Size Guide</a></div>
                         </div>
-                        <div class="CtaButton">ADD TO BAG</div>
+                        <a class="CtaButton" target="_blank" href="https://calendly.com/antisarahshaderclub">ADD TO BAG</a>
                     </div>
                     <div class="Description-rest">
                         <div class="Section">
@@ -94,8 +118,8 @@
                                 <div class="Section-content DescriptionSection-text">Our classic Sarah Shader Club—but negative. The Anti Sarah Shader Club features a snarky, weird girl and is made of soft, lightweight cotton. With an elegant taste for memes and slightly higher computer skills, this may just be the perfect Shader for everyday life.</div>
                         </div>
 <!--                         <div class="Section">
-                                <div class="Section-title">Model is also wearing</div>
-                                <div class="Section-content">xcxc</div>
+                            <div class="Section-title">Model is also wearing</div>
+                            <div class="Section-content">xcxc</div>
                         </div> -->
                     </div>
                 </div>
