--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <link href="assc.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans|Montserrat:300|Lora&display=swap" rel="stylesheet">
+        <title>Anti Sarah Shader Club</title>
     </head>
     <body>
         <div class="Assc">
