--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
         <link href="assc.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans|Montserrat:300|Lora&display=swap" rel="stylesheet">
         <title>Anti Sarah Shader Club</title>
@@ -59,10 +60,10 @@
                     <div class="Description-block">
                         <div class="SizePicker">
                             <div class="SizePicker-buttons">
-                                <div class="Button Button-unavailable Button-4"><span class="ButtonContent">22</span></div>
-                                <div class="Button Button-available Button-3"><span class="ButtonContent">23</span></div>
-                                <div class="Button Button-unavailable Button-2"><span class="ButtonContent">24</span></div>
-                                <div class="Button Button-unavailable Button-1"><span class="ButtonContent">25</span></div>
+                                <div class="Button Button-unavailable Button-4"><span class="ButtonContent">23</span></div>
+                                <div class="Button Button-available Button-3"><span class="ButtonContent">24</span></div>
+                                <div class="Button Button-unavailable Button-2"><span class="ButtonContent">25</span></div>
+                                <div class="Button Button-unavailable Button-1"><span class="ButtonContent">26</span></div>
                                 <div class="SizePicker-text"></div>
                             </div>
                             <div class="SizePicker-guide"><a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXY5YmN2ZHA1dnQ3bWdjaHBobjFlZDlpczVfMjAxOTAzMTIga29iZmxqbDRsMWdjaWdoM3AycHFmcWNta2NAZw&amp;tmsrc=kobfljl4l1gcigh3p2pqfqcmkc%40group.calendar.google.com&amp;scp=ALL">Size Guide</a></div>
@@ -116,7 +117,7 @@
                         </div>
                         <div class="Section">
                                 <div class="Section-title">Description</div>
-                                <div class="Section-content DescriptionSection-text">Our classic Sarah Shader Club—but negative. The Anti Sarah Shader Club features a snarky, weird girl and is made of soft, lightweight cotton. With an elegant taste for memes and slightly higher computer skills, this may just be the perfect Shader for everyday life.</div>
+                                <div class="Section-content DescriptionSection-text">Our classic Sarah Shader Club&mdash;but negative. The Anti Sarah Shader Club features a snarky, weird girl and is made of soft, lightweight cotton. With an elegant taste for memes and slightly higher computer skills, this may just be the perfect Shader for everyday life.</div>
                         </div>
 <!--                         <div class="Section">
                             <div class="Section-title">Model is also wearing</div>
