update birthday and location

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                             <div class="SizePicker">
                                 <div class="SizePicker-buttons">
                                     <div class="Button Button-unavailable Button-4"><span class="ButtonContent">23</span></div>
-                                    <div class="Button Button-available Button-3"><span class="ButtonContent">24</span></div>
-                                    <div class="Button Button-unavailable Button-2"><span class="ButtonContent">25</span></div>
+                                    <div class="Button Button-unavailable Button-3"><span class="ButtonContent">24</span></div>
+                                    <div class="Button Button-available Button-2"><span class="ButtonContent">25</span></div>
                                     <div class="Button Button-unavailable Button-1"><span class="ButtonContent">26</span></div>
                                     <div class="SizePicker-text"></div>
                                 </div>
@@ -106,7 +106,7 @@
                                                 <line fill="none" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="10" x1="14.5" y1="47" x2="29.4" y2="47"/>
                                             </g>
                                         </svg>
-                                        <div class="TextWithIcon-text">Located in San Francisco, CA &#183; <a target="_blank" href="https://goo.gl/maps/feD29QqRWxwAnEac7">See the factory</a></div>
+                                        <div class="TextWithIcon-text">Located in New York, NY &#183; <a target="_blank" href="https://goo.gl/maps/mbAFTjzXsVoXsB3z7">See the factory</a></div>
                                     </div>
                                     <div class="TextWithIcon">
                                         <svg class="TextWithIcon-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 125" enable-background="new 0 0 100 100" xml:space="preserve">
@@ -120,10 +120,6 @@
                                     <div class="Section-title">Description</div>
                                     <div class="Section-content DescriptionSection-text">Our classic Sarah Shader Club&mdash;but negative. The Anti Sarah Shader Club features a snarky, weird girl and is made of soft, lightweight cotton. With an elegant taste for memes and slightly higher computer skills, this may just be the perfect Shader for everyday life.</div>
                             </div>
-    <!--                         <div class="Section">
-                                <div class="Section-title">Model is also wearing</div>
-                                <div class="Section-content">xcxc</div>
-                            </div> -->
                         </div>
                     </div>
                 </div>
