Redo CSS using SASS
Also make some changes to the ages and add a README.md

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <link href="assc.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=PT+Sans|Montserrat:300|Lora&display=swap" rel="stylesheet">
         <title>Anti Sarah Shader Club</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div class="Assc">
-            <div class="Assc-container">
+            <div class="Images-container">
                 <div class="Images">
                     <div class="ImagePicker">
                         <label for="thumbnail-1">
@@ -44,6 +45,7 @@
                         <img class="ImageViewer-fullImage" src="img6.jpg"></img>
                     </div>
                 </div>
+            </div><div class="Description-container">
                 <div class="Description">
                     <div class="Description-block">
                         <div class="Description-title">The Anti Sarah Shader Club &mdash; $69</div>
@@ -53,18 +55,18 @@
                         <div class="Description-block">
                             <div class="ColorPicker-buttons">
                                 <div class="Button Button-3 Button-unavailable"><div class="Button-inner"></div></div>
-                                                            <div class="Button Button-2 Button-available"><div class="Button-inner"></div></div>
-                                                            <div class="Button Button-1 Button-unavailable"><div class="Button-inner"></div></div>
+                                <div class="Button Button-2 Button-available"><div class="Button-inner"></div></div>
+                                <div class="Button Button-1 Button-unavailable"><div class="Button-inner"></div></div>
                                 <div class="ColorPicker-text"></div>
                             </div>
                         </div>
                         <div class="Description-block">
                             <div class="SizePicker">
                                 <div class="SizePicker-buttons">
-                                    <div class="Button Button-unavailable Button-4"><span class="ButtonContent">23</span></div>
-                                    <div class="Button Button-unavailable Button-3"><span class="ButtonContent">24</span></div>
-                                    <div class="Button Button-available Button-2"><span class="ButtonContent">25</span></div>
-                                    <div class="Button Button-unavailable Button-1"><span class="ButtonContent">26</span></div>
+                                    <div class="Button Button-available Button-4"><span class="ButtonContent">25</span></div>
+                                    <div class="Button Button-unavailable Button-3"><span class="ButtonContent">26</span></div>
+                                    <div class="Button Button-unavailable Button-2"><span class="ButtonContent">27</span></div>
+                                    <div class="Button Button-unavailable Button-1"><span class="ButtonContent">28</span></div>
                                     <div class="SizePicker-text"></div>
                                 </div>
                                 <div class="SizePicker-guide"><a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=NXY5YmN2ZHA1dnQ3bWdjaHBobjFlZDlpczVfMjAxOTAzMTIga29iZmxqbDRsMWdjaWdoM3AycHFmcWNta2NAZw&amp;tmsrc=kobfljl4l1gcigh3p2pqfqcmkc%40group.calendar.google.com&amp;scp=ALL">Size Guide</a></div>
