Add shared fonts and misc other adjustments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <link href="assc.css" rel="stylesheet">
@@ -32,17 +33,17 @@
                     </div>
                     <div class="ImageViewer">
                         <input type="radio" name="image-picker" id="thumbnail-1" checked>
-                        <img class="ImageViewer-fullImage" src="img1.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img1.jpg">
                         <input type="radio" name="image-picker" id="thumbnail-2">
-                        <img class="ImageViewer-fullImage" src="img2.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img2.jpg">
                         <input type="radio" name="image-picker" id="thumbnail-3">
-                        <img class="ImageViewer-fullImage" src="img3.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img3.jpg">
                         <input type="radio" name="image-picker" id="thumbnail-4">
-                        <img class="ImageViewer-fullImage" src="img4.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img4.jpg">
                         <input type="radio" name="image-picker" id="thumbnail-5">
-                        <img class="ImageViewer-fullImage" src="img5.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img5.jpg">
                         <input type="radio" name="image-picker" id="thumbnail-6">
-                        <img class="ImageViewer-fullImage" src="img6.jpg"></img>
+                        <img class="ImageViewer-fullImage" src="img6.jpg">
                     </div>
                 </div>
             </div><div class="Description-container">
